--- a/references.html
+++ b/references.html
@@ -2,6 +2,31 @@
 title: Conference References
 layout: defaultWithFooter
 ---
+
+    <div>
+        <h3>IMPROVING TASK SWITCHING IN CHILDREN WITH PRADER-WILLI SYNDROME: FUN, GAMES AND BEING IN THE MOMENT</h3>
+
+        <h4>Nigel Robb, Annalu Waller, Kate A. Woodcock</h4>
+
+        <ol>
+            <li>Woodcock, K., Oliver, C., &amp Humphreys, G. (2009). Associations between repetitive questioning, resistance to change, temper outbursts and anxiety in Prader-Willi and Fragile-X syndromes. Journal of Intellectual Disability Research, 53, 265-278. doi:10.1111/j.1365-2788.2008.01122.x</li>
+
+            <li>Woodcock, K. A., Oliver, C., &amp Humphreys, G. W. (2009). Task-switching deficits and repetitive behaviour in genetic neurodevelopmental disorders: Data from children with Prader-Willi syndrome chromosome 15 q11-q13 deletion and boys with Fragile X syndrome. Cognitive Neuropsychology, 26(2), 172-194. doi:10.1080/02643290802685921</li>
+
+            <li>Green, C. S., & Bavelier, D. (2012). Learning, Attentional Control, and Action Video Games. Current Biology, 22(6), R197-R206. doi:10.1016/j.cub.2012.02.012</li>
+
+            <li>Druin, A. (2002). The role of children in the design of new technology. Behaviour and Information Technology, 21, 25.</li>
+
+            <li>Green, C. S., Sugarman, M. A., Medford, K., Klobusicky, E., & Bavelier, D. (2012). The effect of action video game experience on task-switching. Computers in Human Behavior, 28(3), 984-994. doi:10.1016/j.chb.2011.12.020</li>
+
+            <li>Gioia, G. A., Isquith, P. K., Retzlaff, P. D., & Espy, K. A. (2002). Confirmatory factor analysis of the Behavior Rating Inventory of Executive Function (BRIEF) in a clinical sample. Child Neuropsychology, 8(4), 249-257. doi:10.1076/chin.8.4.249.13513</li>
+
+            <li>Gioia, G. A., Isquith, P. K., Kenworthy, L., & Barton, R. M. (2002). Profiles of everyday executive function in acquired and developmental disorders. Child Neuropsychology, 8(2), 121-137.</li>
+
+            <li>Engeser, S., & Rheinberg, F. (2008). Flow, performance and moderators of challenge-skill balance. Motivation and Emotion, 32(3), 158-172. doi:10.1007/s11031-008-9102-4</li>
+        </ol>
+    </div>
+
     <div>
         <h3>THE DEVELOPMENT OF TASTER, A COGNITIVE TRAINING GAME USING
         HUMAN-CENTERED DESIGN, TAILORED FOR CHILDREN WITH GLOBAL AND SPECIFIC
