--- a/play-dev.html
+++ b/play-dev.html
@@ -3,7 +3,7 @@ title: Play
 layout: defaultWithFooter
 ---
 <div>
-<h1>You're almost ready to play the game. But first, make sure that you're using Google Chrome, and that you're holding the tablet in portrait mode <i class="fa fa-arrows-v"></i></i></h1>
+<h1>You're almost ready to play the game. But first, make sure that you're using Google Chrome, and that you're holding the tablet in portrait mode <i class="fa fa-tablet"></i> <i class="fa fa-arrows-v"></i></h1>
 <h1>When you're ready, tap the button below to load the game.</h1>
 <button type="button" class="btn btn-primary">Primary</button>
 <h3>We know that individuals with Prader-Willi syndrome have particular difficulties with a brain process called "task switching" or "attention switching". These difficulties are linked to the strong preference for routine that lots of people with the syndrome show. They are also linked to the emotional upset and behaviours such as temper outbursts that individuals can show when things change in their routines or plans.</h3>
