--- a/play-dev.html
+++ b/play-dev.html
@@ -4,6 +4,5 @@ layout: defaultWithFooter
 ---
 <div>
 <h1>You're almost ready to play the game. But first, make sure that you're using Google Chrome, and that you're holding the tablet in portrait mode <i class="fa fa-tablet"></i> <i class="fa fa-arrows-v"></i></h1>
-<h1>When you're ready, tap the button below to load the game.</h1>
-<button type="button" class="btn btn-primary" onclick="window.location.href='/mobile/play'">Load Game</button>
+<button type="button" class="btn btn-primary" onclick="window.location.href='/mobile/play'">I'm ready, take me to the game</button>
 </div>
