--- a/play-dev.html
+++ b/play-dev.html
@@ -1,6 +1,6 @@
 ---
 title: Play
-layout: defaultWithFooter
+layout: default
 ---
 <div>
 <h1>You're almost ready to play the game. But first, make sure that you're using Google Chrome, and that you're holding the tablet in portrait mode <i class="fa fa-tablet"></i> <i class="fa fa-arrows-v"></i></h1>
