--- a/mobile-play-landing-page-092016-dev.html
+++ b/mobile-play-landing-page-092016-dev.html
@@ -5,6 +5,6 @@ layout: default
 <div>
 <h1>You're almost ready to play the game. But first, make sure that you're using Google Chrome, and that you're holding the tablet in portrait mode <i class="fa fa-tablet"></i> <i class="fa fa-arrows-v"></i></h1>
 <p class="text-center">
-<button type="button" class="btn btn-primary" onclick="window.location.href='/mobile/play'">I'm ready, take me to the game</button>
+<button type="button" class="btn btn-primary" onclick="window.location.href='/mobile/game'">I'm ready, take me to the game</button>
 </p>
 </div>
