--- a/about.html
+++ b/about.html
@@ -2,15 +2,14 @@
 title: About
 layout: defaultWithFooter
 ---
-<div>
 <h1>TASTER: Training Attention Switching for Temper Episode Reduction.</h1>
 <h3>We know that individuals with Prader-Willi syndrome have particular difficulties with a brain process called "task switching" or "attention switching". These difficulties are linked to the strong preference for routine that lots of people with the syndrome show. They are also linked to the emotional upset and behaviours such as temper outbursts that individuals can show when things change in their routines or plans.</h3>
 <h3>Working closely with a group of children with PWS, we have designed and developed a <a href="{{site.url}}/play" target="_blank">video game</a> to train tasking switching, tailored to the specific needs of children with the syndrome. Our initial results suggest that children who play the game improve their ability to switch between tasks, and we think that this could lead to less emotional upset when their plans or routines change.</h3>
+<h3>Now we want to improve our game to make it even more exciting and enjoyable for a wide range of individuals with PWS. We also want to improve our game to make it better at training task switching. We want to encourage trainees with PWS to be motivated enough to play on most days for about twenty to thirty minutes a day over at least five weeks.</h3>
 <h3>The TASTER project is based at <a href="http://www.qub.ac.uk/schools/psy" target="_blank">Queen's University Belfast</a>, and is funded by the <a href="http://www.fpwr.org" target="_blank">Foundation for Prader-Willi Research</a>.</h3>
 <h1>How to get involved.</h1>
-<h3>If you are the parent or carer of someone with PWS who would like to take part in our research, please contact either <a href="mailto:kx.xwoxodcxxoxck@quxb.xaxcx.uxk" onmouseover="this.href=this.href.replace(/x/g,'');">Kate Woodcock</a> or <a href="mailto:nx.roxxbxbx@qxubx.xaxc.uxk" onmouseover="this.href=this.href.replace(/x/g,'');">Nigel Robb</a>. Taking part is easy! It just involves playing some games and completing an online questionnaire.</h3>
-</div>
-<div class="container" style="max-width: 700px; height: auto;"
+<h3>If you are the parent or carer of someone with PWS 6 years or over, who would like to take part in our research, please <a href="{{site.url}}/contact" target="_blank">contact us</a>. You can take part from <b>anywhere in the world</b>. There are different components of the research that all involve the person with PWS doing activities designed to be fun, and that we will keep making these activities even more fun during the project. We can be <b>completely flexible</b> to fit the demands of the research around you.  Please <a href="{{site.url}}/contact" target="_blank">contact us</a> if you are interested.
+<div class="container" style="max-width: 700px; height: auto;">
 <!-- 4:3 aspect ratio -->
 <div class="embed-responsive embed-responsive-4by3">
   <iframe class="embed-responsive-item" src="//www.youtube.com/embed/oRjY2XGacNA"></iframe>
