--- a/contact.html
+++ b/contact.html
@@ -2,18 +2,18 @@
 title: Contact
 layout: defaultWithFooter
 ---
-<h3>Contact details page
-  To get in touch with us, please email</h3>
+<h3>
+  To get in touch with us, please email </h3>
 <h3>
 Or you can telephone Kate on +44 (0)29 9097 4886
 </h3>
 <h3>
-Or you can write to:
-Kate Woodcock
-School of Psychology, 
-Queen’s University Belfast
-18-30 Malone Road,
-Belfast
+Or you can write to:<br>
+Kate Woodcock<br>
+School of Psychology<br>
+Queen’s University Belfast<br>
+18-30 Malone Roadbr>
+Belfast<br>
 BT9 5BN
 </h3>
 
