--- a/contact.html
+++ b/contact.html
@@ -3,16 +3,18 @@ title: Contact
 layout: defaultWithFooter
 ---
 <h3>
-  To get in touch with us, please email </h3>
+To get in touch with us, please email </h3>
 <h3>
-Or you can telephone Kate on +44 (0)29 9097 4886
+Or you can telephone Kate on +44 (0)28 9097 4886
 </h3>
 <h3>
-Or you can write to:<br>
+Or you can write to:
+</h3>
+<h3>
 Kate Woodcock<br>
 School of Psychology<br>
 Queen’s University Belfast<br>
-18-30 Malone Roadbr>
+18-30 Malone Road<br>
 Belfast<br>
 BT9 5BN
 </h3>
