--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@ title: Contact
 layout: defaultWithFooter
 ---
 <h3>
-To get in touch with us, please email </h3>
+To get in touch with us, please email <a href="mailto:kx.xwoxodcxxoxck@quxb.xaxcx.uxk" onmouseover="this.href=this.href.replace(/x/g,'');">Kate Woodcock</a></h3>
 <h3>
 Or you can telephone Kate on +44 (0)28 9097 4886
 </h3>
