--- a/about.html
+++ b/about.html
@@ -12,6 +12,6 @@ layout: defaultWithFooter
 <div class="container" style="max-width: 700px; height: auto;">
 <!-- 4:3 aspect ratio -->
 <div class="embed-responsive embed-responsive-4by3">
-  <iframe class="embed-responsive-item" src="//www.youtube.com/embed/oRjY2XGacNA"></iframe>
+  <iframe class="embed-responsive-item" src="//www.youtube.com/embed/sgElaf855Y0"></iframe>
 </div>
 </div>
