--- a/about.html
+++ b/about.html
@@ -12,6 +12,9 @@ layout: defaultWithFooter
 <div class="container" style="max-width: 700px; height: auto;">
 <!-- 4:3 aspect ratio -->
 <div class="embed-responsive embed-responsive-4by3">
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/sgElaf855Y0" frameborder="0" allowfullscreen></iframe>
+  <!--
   <iframe class="embed-responsive-item" src="//www.youtube.com/embed/sgElaf855Y0"></iframe>
+-->
 </div>
 </div>
