--- a/mobile/game.html
+++ b/mobile/game.html
@@ -30,6 +30,7 @@
 (function () {
 	// Init parse
 	Parse.initialize("qHh0EHdXGcnd1oGwWbmYN9lStkgMBRPUOVlDdOYF", "NJxfm3sbi0SRfGTQhDs1rPmIpDsGSmJHhCbmvfbC");
+	Parse.serverURL = "https://parseapi.back4app.com"
 	//	Create the game
 	var game = new Phaser.Game('100%', '100%', Phaser.AUTO, 'game');
 	//	Add the game states
