--- a/mobile/game.html
+++ b/mobile/game.html
@@ -16,7 +16,7 @@
 	<!-- Vendor -->
 	<script src="vendor/phaser.min.js"></script>
 	<script src="vendor/Juicy.js"></script>
-	<script src="//www.parsecdn.com/js/parse-1.6.14.min.js"></script>
+	<script src="vendor/parse.min.js"></script>
 
 	<script src="js/taster.min.js"></script>
 
